# subliminal-learning-scaling-law

./: .gitignore  CLAUDE.md  HANDOFF.md  README.md  pyproject.toml  run_72b_pipeline.sh
outputs/: animal_style_map.json
outputs/qwen-2.5-scaling/summary/: finetuning_results_20260126_054448.json  finetuning_results_run4_20260203_040206.json  (+2 more)
reports/: backup_audit_2026-04-14.md  checkpoint_availability.md  run4_data_provenance.md  run4_lambda_row_column_effects.csv  run4_lambda_statistics.csv  run4_lambda_statistics.md  run4_transfer_statistics.csv  run4_transfer_statistics.md  subliminal_learning_analysis.md  tinker_recommended_lrs.json
scripts/: generate_tinker_lrs.py  resume_pipeline.sh  run_all_evals.sh  run_evals_only.sh  run_run4_evals.sh  run_run4_remaining.sh  run_run4_resume.sh  upload_72b_checkpoints.py  upload_72b_remaining.py  upload_all_jsonl_run4.py  upload_checkpoints.py
src/: analyze_run4_confusion_matrices.py  analyze_run4_transfer.py  build_style_map.py  generate_report.py  plot_styles.py  plot_target_rate_heatmap.py  plot_target_rate_vs_size.py  regenerate_stacked_plots.py
src/animal_survey/: models.py  plot_animal_preferences.py  run_72b_survey.py
src/qwen_2_5_scaling/: add_models_to_collection.py  chat.py  constants.py  download_checkpoints.py  eval_div_token.py  eval_qwen_wo_div.py  hf_utils.py  plot_div_token.py  plot_qwen_wo_div.py  run_all.py  run_epoch_plots.py  run_final_eval.py  run_finetuning.py  run_multi_epoch_eval.py  run_plots_custom.py  upload_checkpoints.py  upload_missing_run0.py  visualization.py
(+577 files in other folders)
