[project]
name = "subliminal-learning-scaling-law"
version = "0.1.0"
description = "Scaling law experiments for subliminal learning"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dotenv>=0.9.9",
    "loguru>=0.7.3",
    "matplotlib>=3.10.8",
    "numpy<2.3.1",
    "pandas>=2.3.1",
    "pydantic>=2.11.7",
    "python-dotenv>=1.0.0",
    "statsmodels>=0.14.6",
    "tinker-cookbook>=0.1.0",
]

[tool.setuptools]
packages = ["src", "src.utils", "src.animal_survey", "src.qwen_2_5_scaling", "src.qwen_2_5_scaling.number_generation", "src.qwen_2_5_scaling.finetuning", "src.qwen_2_5_scaling.evaluation"]
package-dir = {"src" = "src"}

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "ipython>=9.4.0",
    "pytest>=8.4.1",
    "ruff>=0.12.4",
]
gpu = [
    "vllm>=0.14.0",
    "torch>=2.8.0",
    "unsloth",
    "trl",
    "peft",
    "datasets",
    "wandb",
    "huggingface_hub",
]
